# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: auth.py  chat.py  conftest.py  database.py  document_configs.py  history.py  main.py  pyproject.toml  selection.py  test_auth.py  test_chat.py  test_history.py  test_selection.py
frontend/: jest.config.ts  package-lock.json  package.json
frontend/__tests__/: ChatInput.test.tsx  DisclaimerModal.test.tsx  authUtils.test.ts  chatApi.test.ts  genericTemplateUtils.test.ts  historyApi.test.ts  templateUtils.test.ts
frontend/app/: document_configs.ts  layout.tsx  page.tsx
frontend/app/components/: ChatInput.tsx  ChatMessage.tsx  ChatSignatures.tsx  ClientProviders.tsx  DisclaimerModal.tsx  DocumentCard.tsx  DocumentSelector.tsx  GenericCreatorClient.tsx  GenericPreview.tsx  NdaChat.tsx  NdaCreatorClient.tsx  NdaForm.tsx  NdaPreview.tsx  SignatureField.tsx  TabSwitcher.tsx
frontend/app/create/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/types/: nda.ts
frontend/app/utils/: authUtils.ts  chatApi.ts  historyApi.ts  selectionApi.ts  templateUtils.ts
frontend/public/templates/: sla.md
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE
